Revised 'merge_input_dicts' function. Now decides based on a list of CLASS input parameters if the larger or smaller input value is the "more precise" one that should be passed to CLASS
	modified:   Backends/include/gambit/Backends/backend_types/classy.hpp
	modified:   Backends/src/backend_types/classy.cpp
	modified:   CosmoBit/src/CosmoBit.cpp
	modified:   yaml_files/CosmoBit_testMP.yaml

--- a/yaml_files/CosmoBit_testMP.yaml
+++ b/yaml_files/CosmoBit_testMP.yaml
@@ -121,7 +121,8 @@ Rules:
     function: set_classy_input_params
     options:
       classy_dict:
-         #P_k_max_h/Mpc: 3
+         #P_k_max_h/Mpc: 0.3  
+         #l_logstep: 0.2
          #m_ncdm: 2
 
   # This rule is only stricly needed when more than one
