--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,6 +57,18 @@ jobs:
       run: |
         cd BUILD && . buildenv.sh
         make -j$(nproc) gambit
+    - name: CLI test
+      run: |
+        . BUILD/buildenv.sh
+        ./gambit -h
+    - name: WC test
+      run: |
+        . BUILD/buildenv.sh
+        ./gambit -f yaml_files/WC_lite.yaml
+    - name: ColliderBit test
+      run: |
+        . BUILD/buildenv.sh
+        ./gambit -f yaml_files/ColliderBit_CMSSM.yaml
     - name: Validation dependencies
       run: |
         . BUILD/buildenv.sh
@@ -74,7 +86,7 @@ jobs:
         echo 'export PATH=$PATH:$GITHUB_WORKSPACE/gambit_bats/numdiff' >> ../BUILD/buildenv.sh
     - name: Validate with BATS
       run: |
-        cat BUILD/buildenv.sh
+        #cat BUILD/buildenv.sh
         . BUILD/buildenv.sh
         cowsay "Testing GAMBIT on $(date)"
         cowsay "$(git log -n 5)"
