Add master branch to the run spec

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: Gambit CI
 
 on:
   push:
-    branches: [ gitlab-ci ]
+    branches: [ master, gitlab-ci ]
   pull_request:
-    branches: [ gitlab-ci ]
+    branches: [ master ]
 
 jobs:
   gambit_build:
