--- a/yaml_files/polychord_fast_slow.yaml
+++ b/yaml_files/polychord_fast_slow.yaml
@@ -1,10 +1,8 @@
 ##########################################################################
-## Validation for LCDM constraints on from various Planck Combinations..
+## Validation of the Planck 2018 baseline constraints on LCDM
 ##
-##   - Using Multinest sampler
+##   - Using polychord as sampler
 ##
-## Patrick Stoecker <stoecker@physik.rwth-aachen.de>
-## 2020, Jan
 ##########################################################################
 
 #======== Input parameter declarations =======
@@ -135,38 +133,13 @@ Priors:
 
 #======== Output setup ========
 Printer:
-  printer: hdf5
-  options:
-    output_file: "Validation_Planck_TTTEEE_lowl_lowE_lensing.hdf5"
-    group: "/data"
-    delete_file_on_restart: false
-    buffer_length: 1000
+  printer: none # Don't use the GAMBIT printer system. Just use the native files of Polychord
 
 #======== Scanner setup ========
 Scanner:
   use_scanner: polychord
 
   scanners:
-    multinest:
-      plugin: multinest
-      like:  LogLike
-      nlive: 10000
-      tol: 1e-5
-
-    diver:
-      plugin: diver
-      like: LogLike
-      convthresh: 1e-5
-      verbosity: 2
-      NP: 10000
-      jDE: true
-      lambdajDE: false
-
-    random:
-      plugin: random
-      point_number: 25
-      like:  LogLike
-
     polychord:
       plugin: polychord
       like:  LogLike
@@ -244,8 +217,8 @@ Rules:
 ##
 ####
 
-  - capability: classy_final_input
-    function: set_classy_input
+  - capability: classy_MPLike_input
+    function: set_classy_input_no_MPLike
 
 #####
 ##
@@ -258,20 +231,6 @@ Rules:
       failsafe: 3
       err: 0
 
-  - capability: BBN_abundances
-    options:
-      isotope_basis: [Yp, D, He3, Be7, Li7]
-      correlation_matrix: [[+1.000e00, +1.524e-2, +2.667e-2, +2.303e-2, +2.429e-2],
-                           [+1.524e-2, +1.000e00, -8.160e-1, -3.775e-1, -3.653e-1],
-                           [+2.667e-2, -8.160e-1, +1.000e00, +3.897e-1, +3.780e-1],
-                           [+2.303e-2, -3.775e-1, +3.897e-1, +1.000e00, +9.974e-1],
-                           [+2.429e-2, -3.653e-1, +3.780e-1, +9.974e-1, +1.000e00]]
-      relative_errors: [1.348e-3, 1.596e-2, 1.618e-2, 6.788e-2, 6.579e-2]
-
-  - capability:   plc_3_0_init
-    options:
-      plc_3.0_path: /home/wh260/rds/hpc-work/data/code/plc_3.0/
-
 #======== Logging setup ========
 Logger:
   redirection:
@@ -282,6 +241,8 @@ Logger:
 KeyValues:
 
   debug: false
+
+  disable_logs_during_scan: true
 
   default_output_path: "./runs/lcdm/"
 
