--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,8 @@ on:
     branches: [ master, gitlab-ci ]
   pull_request:
     branches: [ master ]
+  schedule:
+    - cron:  '* * * * 1'
 
 jobs:
   gambit_build:
