--- a/yaml_files/include/AnnihilatingDM_mixture_scan.yaml
+++ b/yaml_files/include/AnnihilatingDM_mixture_scan.yaml
@@ -1,5 +1,5 @@
 ##########################################################################
-## AnnihilatingDM_general parameter
+## AnnihilatingDM_mixture parameter
 ##
 ## Patrick Stoecker <stoecker@physik.rwth-aachen.de>
 ## 2020, Jan
@@ -10,9 +10,15 @@ mass:
   range: [1e-2, 1e4]
   prior_type: log
 
-# BR of decay int e+ e- (1 -BR is decay into photons)
-BR:
+# BR of decay into e+ e-.and photons.
+# We assume that there is no contribution into an inefficient final state such as neutrinos, such that BR_el + BR_ph = 1 holds.
+# We chose BR_el to be a free parameter. Due to the condition BR_el + BR_ph = 1, BR_ph is not free such that we use the 'same_as' prior.
+BR_el:
   range: [0.0, 1.0]
+BR_ph:
+  same_as: AnnihilatingDM_mixture::BR_el
+  shift: 1.0
+  scale: -1.0
 
 # < sigma v > in cm^3 s^-1
 sigmav:
