--- a/yaml_files/CosmoBit_tutorial.yaml
+++ b/yaml_files/CosmoBit_tutorial.yaml
@@ -154,6 +154,13 @@ Parameters:
   #  dNur_CMB: 0.
   #  dNur_BBN: 0.
 
+  # models for energy injection between z~30 and z~2700
+  # The mixture models below assume mono-energetic dark matter decays/annihilations into photons, and e+/e- with branching fractions BR_el and BR_ph
+  # The complementary branching fraction (1-BR_el-BR_ph) accounts for possible inefficient final states such as neutrinos
+  # In the examples included, no inefficient contribution is assumed such that BR_el + BR_ph = 1
+  #AnnihilatingDM_mixture: !import include/AnnihilatingDM_mixture_scan.yaml
+  #DecayingDM_mixture: !import include/DecayingDM_mixture_scan.yaml
+
   # nuisance parameters for Planck likelihood
   #  => if you don't include the Planck likelihoods into the scan you should get a FATAL Error
   #     telling you that no function requires any of the model parameters, comment this line out
@@ -345,6 +352,16 @@ Rules:
                            [+2.303e-2, -3.775e-1, +3.897e-1, +1.000e00, +9.974e-1],
                            [+2.429e-2, -3.653e-1, +3.780e-1, +9.974e-1, +1.000e00]]
       relative_errors: [1.348e-3, 1.596e-2, 1.618e-2, 6.788e-2, 6.579e-2]
+
+  # ---- Energy injection -----
+
+  # Options for the treatment of energy injection to the efficiency function(s) f(z)
+  # These are all options that are currently recognized and are set to their default values
+  - capability: DarkAges_1_2_0_init
+    options:
+      f_eff_mode: false    # Calculate the single f_eff(z) rather than the full f_c(z) table? By default f_c(z) is calculated
+      print_table: false   # Print the table to stdout. Useful for debugging
+      z_max: 1.e7          # Constant continuation of efficiency table up to a given redshift. (f(z) = const. for 2.7e3 < z < z_max)
 
 #======== Logging setup ========
 Logger:
