--- a/yaml_files/CosmoBit_tutorial.yaml
+++ b/yaml_files/CosmoBit_tutorial.yaml
@@ -326,14 +326,6 @@ Rules:
 
   # ---- BBN -----
 
-  # Set path to file containing measured values of light element abundances to use for
-  # Likelihood calculation (assumes root directory is gambit/CosmoBit/data/BBN)
-  - capability: BBN_LogLike
-    options:
-      DataFile: default.dat     # Use the Yp measurement from PDG 2017 and the updated D/H measurement of 1801.08023
-      #DataFile: ConsD_2014.dat # Use the Yp measurement from PDG 2017 and the conservative D/H measurement of 1412.4043
-      #DataFile: AlterBBN.dat   # Use the observed values given in AlterBBN
-
   # error calculation precision settings for AltterBBN
   # (use 1 and 0 to speed up Helium abundance calculation for testing)
   # (For more precise calculations, use 3 or 7)
@@ -342,7 +334,13 @@ Rules:
       failsafe: 3
       err: 0
 
-  # correlation matrix for BBN error calculation todo explain what that is!
+  # correlation matrix for BBN error calculation
+  # In order to speed up the error estimation of the BBN abundances, we provide the option to manually set the covariance
+  # matrix used for the evaluation of the BBN likelihood by assuming their relative errors and/or their correlations are constant.
+  # This can be done by specifying the names of the isotopes of which the covariance matrix should be modified. (If missing, an error is thrown)
+  # Relative uncertainties can be passed vie 'relative_errors' (If not present, uncertainties are derived from the AlterBBN results)
+  # Alternatively to relative uncertainties, the absloute uncertainties can be passed via 'absolute_errors' (This is mutually exclusive with 'relative_errors')
+  # The correlation matrix can be passed via 'correlation_matrix' (If not present, the correlation matrix is assumed to be a unit matrix)
   - capability: BBN_abundances
     options:
       isotope_basis: [Yp, D, He3, Be7, Li7]
@@ -352,6 +350,14 @@ Rules:
                            [+2.303e-2, -3.775e-1, +3.897e-1, +1.000e00, +9.974e-1],
                            [+2.429e-2, -3.653e-1, +3.780e-1, +9.974e-1, +1.000e00]]
       relative_errors: [1.348e-3, 1.596e-2, 1.618e-2, 6.788e-2, 6.579e-2]
+
+  # Set path to file containing measured values of light element abundances to use for
+  # Likelihood calculation (assumes root directory is gambit/CosmoBit/data/BBN)
+  - capability: BBN_LogLike
+    options:
+      DataFile: default.dat     # Use the Yp measurement from PDG 2017 and the updated D/H measurement of 1801.08023
+      #DataFile: ConsD_2014.dat # Use the Yp measurement from PDG 2017 and the conservative D/H measurement of 1412.4043
+      #DataFile: AlterBBN.dat   # Use the observed values given in AlterBBN
 
   # ---- Energy injection -----
 
