Fixes to yaml files to pass CI test 	modified:   yaml_files/CMSSM.yaml 	modified:   yaml_files/ColliderBit_CMSSM.yaml

--- a/yaml_files/CMSSM.yaml
+++ b/yaml_files/CMSSM.yaml
@@ -602,6 +602,7 @@ KeyValues:
     prefer_model_specific_functions: true
 
   likelihood:
+    # Choose a lower cutoff for the likelihood
     model_invalid_for_lnlike_below: -5e5
     model_invalid_for_lnlike_below_alt: -1e5
 
