--- a/yaml_files/CosmoBit_quickStart.yaml
+++ b/yaml_files/CosmoBit_quickStart.yaml
@@ -224,11 +224,18 @@ Rules:
   # (JR) tried to add rule for first capability dependency resolver complains about
   # when having multiple classy versions installed at the same time. 
   # Syntax from CMSSM.yaml, but GAMBIT doesn't seem to read it 
+  # (TG) fixed this so remove comment when happy
   # #TODO
-  - capability: get_classy_backendDir
+  - capability: MP_LogLikes
     backends:
-    - {backend: classy, version: 2.6.3}
+    - {capability: get_classy_backendDir, backend: classy, version: 2.6.3}
+    - {capability: get_classy_cosmo_object, backend: classy, version: 2.6.3}
+    - {capability: get_MP_loglike, backend: MontePythonLike}
   
+  # (TG) Added this as it also complains of ambiguous backend selection
+  - capability: Omega0_m
+    backends:
+    - {capability: class_get_Omega0_m, backend: classy, version: 2.6.3}
 
   # ----------- 7.c) "Global" (CossmoBit-wide) settings ------------
 
