--- a/yaml_files/QCDAxions.yaml
+++ b/yaml_files/QCDAxions.yaml
@@ -6,6 +6,26 @@
 #################################
 
 Parameters:
+
+  # (JR) add LCDM to get access to CMB temperature, T_cmb
+  # ATM, this yaml file will fail ->
+  #
+  # GAMBIT has exited with fatal exception: GAMBIT error
+  # ERROR: A problem has been encountered in the model subsystem.
+  # Requested parameter "T_R" is not available. 
+  # Generally this happens because you have requested a parameter of a model that
+  # is not being scanned (check that you are using the ModelInUse() function), or
+  # because you have failed to declare the dependency on the model's parameters  
+  # in your rollcall header using ALLOW_MODEL(S) or ALLOW_MODEL_DEPENDENCE.
+  # 
+  # we need to fix this TODO
+  LCDM:
+    omega_b:   0.02237
+    omega_cdm: 0.1200
+    H0:        67.36
+    tau_reio:  0.0544
+    T_cmb:     2.72548
+
   QCDAxion:
     fa:
       range: [1.0E6, 1.0E16]
@@ -65,7 +85,7 @@ Printer:
 #################################
 
 Scanner:
-  use_scanner: de
+  use_scanner: random
 
   scanners:
     mn:
@@ -85,6 +105,10 @@ Scanner:
       plugin: twalk
       like: LogLike
       sqrtR: 1.01
+    random:
+      plugin: random
+      point_number: 2
+      like:  LogLike
 
 #################################
  # likelihoods and observables
