--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -191,29 +191,35 @@ else()
   set(MIN_pybind11_VERSION "2.5.0")
   set(PREFERRED_pybind11_VERSION "2.5.0")
   set(pybind11_CONTRIB_DIR "${PROJECT_SOURCE_DIR}/contrib/pybind11")
+  include_directories("${PYTHON_INCLUDE_DIRS}")
   find_package(pybind11 QUIET)
-  if(NOT pybind11_FOUND AND EXISTS "${pybind11_CONTRIB_DIR}")
-    use_contributed_pybind11()
-  endif()
   if(pybind11_FOUND)
     if(pybind11_VERSION VERSION_LESS MIN_pybind11_VERSION)
-      message("${BoldRed}   Found pybind11 ${pybind11_VERSION}. GAMBIT requires at least v${MIN_pybind11_VERSION}.${ColourReset}")
-      set(pybind11_FOUND FALSE)
+      if(EXISTS "${pybind11_CONTRIB_DIR}")
+        use_contributed_pybind11()
+      else()
+        message("${BoldRed}   Found pybind11 ${pybind11_VERSION}. GAMBIT requires at least v${MIN_pybind11_VERSION}.${ColourReset}")
+        set(pybind11_FOUND FALSE)
+      endif()
     else()
       message("${BoldYellow}   Found pybind11 ${pybind11_VERSION} at ${pybind11_DIR}.${ColourReset}")
-      include_directories("${PYTHON_INCLUDE_DIRS};${PYBIND11_INCLUDE_DIR}")
+      include_directories("${PYBIND11_INCLUDE_DIR}")
     endif()
   endif()
-  if(NOT pybind11_FOUND AND NOT EXISTS "${pybind11_CONTRIB_DIR}")
-    message("${BoldRed}   CMake will now download and install pybind11 v${PREFERRED_pybind11_VERSION}.${ColourReset}")
-    execute_process(RESULT_VARIABLE result COMMAND git clone https://github.com/pybind/pybind11.git ${pybind11_CONTRIB_DIR})
-    if(${result} STREQUAL "0")
-      execute_process(COMMAND ${CMAKE_COMMAND} -E chdir ${pybind11_CONTRIB_DIR} git checkout -q v${PREFERRED_pybind11_VERSION})
+  if(NOT pybind11_FOUND)
+    if(EXISTS "${pybind11_CONTRIB_DIR}")
       use_contributed_pybind11()
     else()
-      message("${BoldRed}   Attempt to clone git repository for pybind11 failed.  This may be because you are disconnected from the internet.\n   "
-              "Otherwise, your git installation may be faulty. Errors about missing .so files are usually due to\n   "
-              "your git installation being linked to a buggy version of libcurl.  In that case, try reinstalling libcurl.${ColourReset}")
+      message("${BoldRed}   CMake will now download and install pybind11 v${PREFERRED_pybind11_VERSION}.${ColourReset}")
+      execute_process(RESULT_VARIABLE result COMMAND git clone https://github.com/pybind/pybind11.git ${pybind11_CONTRIB_DIR})
+      if(${result} STREQUAL "0")
+        execute_process(COMMAND ${CMAKE_COMMAND} -E chdir ${pybind11_CONTRIB_DIR} git checkout -q v${PREFERRED_pybind11_VERSION})
+        use_contributed_pybind11()
+      else()
+        message("${BoldRed}   Attempt to clone git repository for pybind11 failed.  This may be because you are disconnected from the internet.\n   "
+                "Otherwise, your git installation may be faulty. Errors about missing .so files are usually due to\n   "
+                "your git installation being linked to a buggy version of libcurl.  In that case, try reinstalling libcurl.${ColourReset}")
+      endif()
     endif()
   endif()
   set(HAVE_PYBIND11 "${pybind11_FOUND}")
