Fixed harvester so that they don't scrap types in between HAVE_PYBIND11 guards

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -175,9 +175,9 @@ endif()
 # Check for pybind11 if PythonLibs were found and not ditched
 if(NOT PYTHONLIBS_FOUND)
   if(DITCH_PYBIND)
-    message("${BoldCyan} X Excluding pybind11 from GAMBIT configuration. Ditching support for CosmoBit and Python backends.${ColourReset}")
+    message("${BoldCyan} X Excluding pybind11 from GAMBIT configuration. Ditching support for Python backends.${ColourReset}")
   else()
-    message("${BoldRed}   PythonLibs NOT found, so pybind11 cannot be used. Ditching support for CosmoBit and Python backends.${ColourReset}\n"
+    message("${BoldRed}   PythonLibs NOT found, so pybind11 cannot be used. Ditching support for Python backends.${ColourReset}\n"
             "   If you *do* have the Python libraries installed, you should first try setting/unsetting\n"
             "   FORCE_PYTHON2 or FORCE_PYTHON3 when invoking cmake (make sure to clean out your build\n"
             "   directory in between any such changes).  If that does not work, you can manually set the\n"
@@ -185,8 +185,8 @@ if(NOT PYTHONLIBS_FOUND)
             "     PYTHON_LIBRARY\n"
             "     PYTHON_INCLUDE_DIR\n"
             "     PYTHON_EXECUTABLE")
+  set(itch "${itch};pybind11")
   endif()
-  set(itch "${itch};CosmoBit")
 else()
   set(MIN_pybind11_VERSION "2.5.0")
   set(PREFERRED_pybind11_VERSION "2.5.0")
